--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nocmnt/FirstApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nocmnt/FirstApp/issues"
+  },
+  "homepage": "https://github.com/nocmnt/FirstApp#readme"
 }
